fix card spacing

--- a/src/components/ArticlesSection/articlessection.module.css
+++ b/src/components/ArticlesSection/articlessection.module.css
@@ -6,7 +6,7 @@
 }
 
 .header {
-  height: 9em;
+  height: 7em;
 }
 
 .card {
@@ -20,4 +20,8 @@
   margin: 1em;
   font-size: 1.2em;
   padding: 1em;
+}
+
+.card > p {
+  padding-top: 1.6em;
 }
